# rust-newsletters

./: Cargo.toml  Dockerfile
.github/workflows/: general.yml
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
stories/: features.md
tests/: health_check.rs
